MO-133: Implement compliance declaration search (#68)
* Implement search method

* Connect search endpoint with service call for search

* Rename OrganisationRequest DTO to Organisation as it's used in requests and responses and can be shared

* Remove unreachable code

* Improve request validation and documentation in the API spec

* Remove magic strings

* PR feedback: regex escaping
