# tests/Api.Tests/Endpoints/OpenApi/OpenApiTests.OpenApi_VerifyAsExpected.verified.json
@@ -522,7 +522,6 @@
             "in": "query",
             "description": "Page number (1-based), defaults to 1 if not specified",
             "schema": {
-              "maximum": 2147483647,
               "minimum": 1,
               "pattern": "^-?(?:0|[1-9]\\d*)$",
               "type": [
@@ -717,7 +716,7 @@
             "$ref": "#/components/schemas/ComplianceDeclarationStatus"
           },
           "organisation": {
-            "$ref": "#/components/schemas/OrganisationRequest"
+            "$ref": "#/components/schemas/Organisation"
           },
           "obligationYear": {
             "pattern": "^-?(?:0|[1-9]\\d*)$",
@@ -809,7 +808,7 @@
         "type": "object",
         "properties": {
           "organisation": {
-            "$ref": "#/components/schemas/OrganisationRequest"
+            "$ref": "#/components/schemas/Organisation"
           },
           "obligationYear": {
             "maximum": 2050,
@@ -962,29 +961,7 @@
           }
         }
       },
-      "OrganisationComplianceDeclarations": {
-        "type": "object",
-        "properties": {
-          "complianceDeclarations": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/ComplianceDeclaration"
-            }
-          }
-        }
-      },
-      "OrganisationObligations": {
-        "type": "object",
-        "properties": {
-          "obligations": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Obligation"
-            }
-          }
-        }
-      },
-      "OrganisationRequest": {
+      "Organisation": {
         "required": [
           "id",
           "name",
@@ -1033,6 +1010,28 @@
           },
           "regulatorEmail": {
             "type": "string"
+          }
+        }
+      },
+      "OrganisationComplianceDeclarations": {
+        "type": "object",
+        "properties": {
+          "complianceDeclarations": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ComplianceDeclaration"
+            }
+          }
+        }
+      },
+      "OrganisationObligations": {
+        "type": "object",
+        "properties": {
+          "obligations": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Obligation"
+            }
           }
         }
       },
